--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Caesar Cipher</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root">
-      <h1>Hello world!</h1>
-    </div>
-    <script src="index.js" type="module"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Send Secret</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div id="root">
+    <h1>Send Secret</h1>
+  </div>
+  <p>
+  <pre>Conheça o Send Secret, sua ferramenta para codificar e descodificar mensagens de forma prática 
+    e divertida! Você pode usá-lo para criar mensagens cifradas, compartilhar informações secretas,
+    dados privados, endereços e muito mais!</pre>
+  </p>
+
+  <div class="grid">
+    <label class="desloca">Escolha aqui sua chave</label>
+    <select id="chave" required="required">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+    </select>
+  </div>
+  <h2>Criptografia</h2>
+  <textarea placeholder="Digite seu texto aqui" id="mensagem" rows="5" cols="40"></textarea>
+  <input type="submit" id="btn-cifrar" class="enviar" value="cifrar" />
+  <textarea placeholder="Resultado" id="mensagem-cifrada" rows="5" cols="40"></textarea>
+
+  <div class="grid2">
+    <label class="desloca">Escolha aqui sua chave</label>
+    <select id="chave1" required="required">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+    </select>
+  </div>
+  <h2>Decifragem</h2>
+  <textarea placeholder="Resultado" id="input-decifrar" rows="5" cols="40"></textarea>
+  <input type="submit" id="btn-decifrar" class="enviar" value="decifrar" />
+  <textarea placeholder="Resultado" id="resultado-decifragem" rows="5" cols="40"></textarea>
+
+  <script src="index.js" type="module"></script>
+</body>
+
+<footer>Criado por Marianna Esteves.</footer>
+
 </html>
